# backend.ai-docker-volume

./: .gitignore  Dockerfile  Makefile  README.md  backendai-volume.json  config.json  entrypoint.sh  setup.cfg
docker/: Dockerfile  config.json  entrypoint.sh  rebuild_rootfs.sh
lablupvolume/: cli.py
src/: plugin.py
src/ai/backend/docker/volume/: cli.py  plugin.py
