[metadata]
name = backend.ai-docker-volume
version = attr: src.ai.backend.docker.volume.__version__
description = Lablup's Backend.AI Volume Plugin for Docker.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lablup/backend.ai-docker-volume
author = Lablup Inc.
author_email = jpark@lablup.com
license = LGPLv3
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Environment :: No Input/Output (Daemon)
    Topic :: Scientific/Engineering
    Topic :: Software Development
project_urls =
    Documentation = https://github.com/lablup/backend.ai-docker-volume

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6,<3.7
setup_requires =
    setuptools>=40.1.0
install_requires =
    bottle~=0.12.16
    Click>=7.0
    docker~=3.6
    waitress~=1.1.0
zip_safe = false

[options.extras_require]
build =
    wheel>=0.31.0
    twine>=1.11.0
test =
    pytest>=3.8.0
    pytest-cov
    pytest-mock
    flake8
    codecov
dev =
ci =

[options.entry_points]
console_scripts =
    bai-volume = ai.backend.docker.volume.cli:main

[options.packages.find]
where = src
include = ai.backend.*

[bdist_wheel]
universal = false

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E128,E129,E722,E731,E221,E241,E401,N801,N802
max-line-length = 85
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,dist,docs

[tool:pytest]
testpaths = tests
